--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,12 @@
+language: java
+sudo: false
+branches:
+  only:
+    - master
+jdk:
+  - openjdk7
+  #  - oraclejdk8
+
 before_cache:
 - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
 cache:
