--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,17 @@
-language: java
+language: android
+android:
+  components:
+    # Uncomment the lines below if you want to
+    # use the latest revision of Android SDK Tools
+    # - platform-tools
+    # - tools
+
+    # The BuildTools version used by your project
+    - build-tools-23.0.2
+
+
+    # The SDK version used to compile your project
+    - android-21
 sudo: false
 branches:
   only:
