--- a/AndroidApp/build.gradle
+++ b/AndroidApp/build.gradle
@@ -63,6 +63,5 @@ findbugs {
 }
 
 dependencies {
-    /* compile fileTree(dir: 'libs', include: ['*.jar']) */
-    compile "com.android.support:support-v4:23.2.0"
+    compile fileTree(dir: 'libs', include: ['*.jar'])
 }
