--- a/.jshintrc
+++ b/.jshintrc
@@ -1,6 +1,6 @@
 {
   "node": true,
-  "esnext": true,
+  "browser": true,
   "bitwise": true,
   "camelcase": true,
   "curly": true,
@@ -8,14 +8,17 @@
   "immed": true,
   "indent": 2,
   "latedef": true,
-  "newcap": true,
   "noarg": true,
   "quotmark": "single",
-  "regexp": true,
   "undef": true,
   "unused": true,
-  "strict": true,
-  "trailing": true,
-  "smarttabs": true,
-  "white": true
+  "newcap": false,
+  "globals": {
+    "wrap": true,
+    "unwrap": true,
+    "Polymer": true,
+    "Platform": true,
+    "page": true,
+    "app": true
+  }
 }
