--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
     "gulp-changed": "^1.0.0",
+    "gulp-clean-css": "^2.0.3",
     "gulp-gh-pages": "^0.5.4",
     "gulp-html-extract": "^0.0.3",
     "gulp-if": "^2.0.0",
