--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: android
+node_js: '5.1'
 android:
   components:
   - platform-tools
@@ -14,8 +15,6 @@ addons:
     - google-chrome
     packages:
     - google-chrome-stable
-node_js:
-- '5.1'
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
