--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - sleep 3
-script: sudo sh - `./build.sh`
+script: sh -e build.sh
 after_success: "./travis-gh-pages-deploy-runner.sh"
 deploy:
   provider: heroku
