--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - sleep 3
+before_script: sh -e travis-pre-build.sh
 script: sh -e build.sh
 after_success: "./travis-gh-pages-deploy-runner.sh"
 deploy:
