--- a/.jshintrc
+++ b/.jshintrc
@@ -11,7 +11,7 @@
   "noarg": true,
   "quotmark": "single",
   "undef": true,
-  "unused": true,
+  "unused": false,
   "newcap": false,
   "globals": {
     "wrap": true,
