--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,7 @@ before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
 - sleep 3
-before_script: travis-pre-build.sh
+# before_script: travis-pre-build.sh
 script: build.sh
 after_success: travis-gh-pages-deploy-runner.sh
 deploy:
