--- a/.jshintrc
+++ b/.jshintrc
@@ -19,6 +19,8 @@
     "Polymer": true,
     "Platform": true,
     "page": true,
-    "app": true
+    "app": true,
+    "$": true,
+    "jQuery": true
   }
 }
