--- a/.jshintrc
+++ b/.jshintrc
@@ -7,7 +7,7 @@
   "eqeqeq": true,
   "immed": true,
   "indent": 2,
-  "latedef": true,
+  "latedef": false,
   "noarg": true,
   "quotmark": "single",
   "undef": true,
@@ -20,7 +20,15 @@
     "Platform": true,
     "page": true,
     "app": true,
+
     "$": true,
-    "jQuery": true
+    "jQuery": true,
+    "canvasEl": true,
+    "canvas": true,
+    "alert": true,
+    "stopNote": true,
+    "PitchDetectorCanvasDraw": true,
+    "PitchDetector": true,
+    "AudioContext": true
   }
 }
