add chrome dependency

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,8 @@ addons:
     sources:
     - google-chrome
     packages:
+    - lsb-base
+    - libstdc++6
     - google-chrome-stable
 before_install:
 - export DISPLAY=:99.0
