--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ android:
   components:
   - platform-tools
   - tools
+  - android-23
 sudo: true
 branches:
   only:
@@ -14,8 +15,8 @@ addons:
   apt:
     sources:
     - google-chrome
-    packages:
-    - google-chrome-stable
+    # packages:
+    # - google-chrome-stable
 before_install:
 - export DISPLAY=:99.0
 - sh -e /etc/init.d/xvfb start
