--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-jscs-stylish": "^1.1.2",
     "gulp-jshint": "^1.6.3",
     "gulp-load-plugins": "^1.1.0",
+    "gulp-minify-css": "^1.2.1",
     "gulp-minify-html": "^1.0.2",
     "gulp-minify-inline": "^0.1.1",
     "gulp-rename": "^1.2.0",
