--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,20 @@ bower_components
 /plugins/
 /res/*/current/
 
+# cordova android
+platforms/android/assets/www
+platforms/android/bin
+platforms/android/gen
+platforms/android/local.properties
+platforms/android/ant-build
+platforms/android/ant-gen
+platforms/android/CordovaLib/ant-build
+platforms/android/CordovaLib/ant-gen
+platforms/android/CordovaLib/bin
+platforms/android/CordovaLib/gen
+platforms/android/CordovaLib/local.properties
+
+
 # build folder
 /www/
 
