--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Relativiti",
   "private": true,
-  "license":"MIT",
+  "license": "MIT",
   "devDependencies": {
     "browser-sync": "^2.7.7",
     "browserify": "^5.11.1",
@@ -55,5 +55,8 @@
   },
   "engines": {
     "node": "5.11.0"
+  },
+  "dependencies": {
+    "bower": "^1.7.9"
   }
 }
