--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "test": "gulp test:local",
     "start": "gulp serve",
     "lint": "gulp lint",
-    "postinstall": "bower install --allow-root"
+    "postinstall": "bower install --allow-root; gulp"
   },
   "engines": {
     "node": "5.11.0"
