--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Relativiti",
+  "name": "relativiti",
   "private": true,
   "license": "MIT",
   "devDependencies": {
@@ -51,7 +51,7 @@
     "test": "gulp test:local",
     "start": "gulp serve",
     "lint": "gulp lint",
-    "postinstall": "bower install --allow-root; gulp"
+    "postinstall": "bower install --allow-root && gulp"
   },
   "engines": {
     "node": "5.11.0"
