--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "cordova": "5.2.0",
     "del": "^2.0.2",
     "glob-all": "^3.0.1",
-    "gulp": "^3.8.5",
+//    "gulp": "^3.8.5",
     "gulp-autoprefixer": "^3.1.0",
     "gulp-cache": "^0.4.0",
     "gulp-changed": "^1.0.0",
